Changed to use a real NSWindowController.
Reason: so the WC gets properly inserted in the responder chain.

--- a/ChangeFontTest/Base.lproj/MainMenu.xib
+++ b/ChangeFontTest/Base.lproj/MainMenu.xib
@@ -777,6 +777,10 @@
             </connections>
             <point key="canvasLocation" x="57" y="489"/>
         </window>
-        <customObject id="aOo-AC-wW5" customClass="MainWindowDelegate"/>
+        <customObject id="aOo-AC-wW5" customClass="MainWindowController">
+            <connections>
+                <outlet property="window" destination="QvC-M9-y7g" id="HzP-RW-T8T"/>
+            </connections>
+        </customObject>
     </objects>
 </document>
