Made font changing work in the NSTextView.
- Made it rich text.
- Turned on Uses Font Panel (didn't realize I had to do that).
- Gave it some starter text you can select right away and fiddle with.

--- a/ChangeFontTest/Base.lproj/MainMenu.xib
+++ b/ChangeFontTest/Base.lproj/MainMenu.xib
@@ -701,13 +701,22 @@
                             <rect key="frame" x="0.0" y="0.0" width="225" height="111"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView ambiguous="YES" importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="ofC-nM-tTr">
+                                <textView ambiguous="YES" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" smartInsertDelete="YES" id="ofC-nM-tTr">
                                     <rect key="frame" x="0.0" y="0.0" width="225" height="111"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <size key="minSize" width="225" height="111"/>
                                     <size key="maxSize" width="225" height="10000000"/>
+                                    <attributedString key="textStorage">
+                                        <fragment content="You can edit rich text in this NSTextView.">
+                                            <attributes>
+                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <font key="NSFont" size="12" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
                                     <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
                             </subviews>
